--- a/TestWebApplication/appsettings.json
+++ b/TestWebApplication/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TaskBoard;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UserContext": "Server=(localdb)\\mssqllocaldb;Database=UserContext-ec5c9931-2099-4734-ac66-ebb9c4f3ca40;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
